HW1/javali_tests/HW1/ReadWrite.javali
/* Test read/write native functions */
class Main {
	void main() {
		int r1, r2;
		int i0,  i1,  i2;		
		
		i0 = 5;
		i1 = read();
		i1 = i1/(i1+4);
		write(i1);
		r1 = i0 + i1;
		
		write(r1); writeln();
		write(r1 - 3); writeln();
	}
}
